--- a/WebApp/templates/details.html
+++ b/WebApp/templates/details.html
@@ -26,7 +26,7 @@
 <p style="font-size: 42px; color: black"> {{user}} </p>
 <p style="font-size: 32px"><b>Contact: </b></p>
 <p><u>Email: {{email}} </u></p>
-<p><u>Phone Number: N/A</u></p>
+<p><u>Phone Number: {{phone}}</u></p>
 <p style="font-size: 32px"><b>Personal Info: </b></p>
 <p><u> Age: {{num}}</u></p>
 <p><u>Birthday: N/A</u></p>
